Implement the code snippet

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,7 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "webapp.py",
-                "FLASK_DEBUG": "1"
+                "FLASK_APP": "hello_app.webapp",
             },
             "args": [
                 "run",
